melhorias finais
